@startuml
!theme plain

class State

class Machine {
  $tool transitions
  routable signals
}

class ToolDef {
  visibility
  emits
  optional phases
}

class Catalog {
  +derive_dynamic_phases(machine, tools)
}

class Registry {
  derived ToolSpecs
  +Manifest(state)
  +ResolveExternalTool(name, state)
}

class PromptAssembler {
  +assemble(state, history)
}

class ToolManifest {
  filtered subset sent to model
}

Catalog --> Machine : reads grammar
Catalog --> ToolDef : reads outcomes
Catalog --> Registry : registers derived phases
PromptAssembler --> State : reads current
PromptAssembler --> Registry : Manifest(state)
PromptAssembler --> ToolManifest : builds
@enduml
